--- a/.babelrc
+++ b/.babelrc
@@ -11,6 +11,8 @@
         },
         "modules": false
       }
-    ]
-  ]
+    ],
+    "babel-preset-react"
+  ],
+  "plugins": ["transform-regenerator"]
 }
