--- a/group_vars/juniper/edxapp.yml
+++ b/group_vars/juniper/edxapp.yml
@@ -24,10 +24,10 @@ EDXAPP_SESSION_COOKIE_NAME: "{{ EDXAPP_LMS_SITE_NAME }}_edxapp"
 
 EDXAPP_USE_GIT_IDENTITY: True
 # TODO unificated repositories structures
-edx_platform_repo: "https://github.com/edx/edx-platform.git"
-edx_platform_version: "open-release/juniper.rc2"
-edx_ansible_source_repo: "https://gitlab.raccoongang.com/edx/configuration.git"
-configuration_version: "juniper-rg"
+edx_platform_repo: "git@gitlab.raccoongang.com:hippoteam/juniper/edx-platform.git"
+EDX_PLATFORM_VERSION: "juniper-rg"
+edx_ansible_source_repo: "https://gitlab.raccoongang.com/hippoteam/juniper/configuration.git"
+CONFIGURATION_VERSION: "juniper-rg"
 
 EDXAPP_GRADE_STORAGE_TYPE_LOCAL: true
 EDXAPP_GRADE_STORAGE_TYPE: ''
