Add rg_sentry to auth extra vars

--- a/host_vars/juniper_dev/edxapp.yml
+++ b/host_vars/juniper_dev/edxapp.yml
@@ -24,3 +24,6 @@ CERTS_VERSION: 'open-release/juniper.master'
 
 
 #EDXAPP_ENV_EXTRA:
+
+EDXAPP_AUTH_EXTRA:
+  RG_SENTRY_DSN: "{{ COMMON_RG_SENTRY_DSN }}"
