--- a/host_vars/juniper_dev/edxapp.yml
+++ b/host_vars/juniper_dev/edxapp.yml
@@ -23,3 +23,4 @@ DEVPI_WEB_VERSION: '3.5.2'
 DEVPI_CLIENT_VERSION: '5.1.1'
 EDX_NOTES_API_VERSION: 'open-release/juniper.master'
 CERTS_VERSION: 'open-release/juniper.master'
+COMMON_RETIREMENT_SERVICE_SETUP: true
