--- a/hosts.yml
+++ b/hosts.yml
@@ -1,11 +1,21 @@
 ---
 all:
     hosts:
-        juniper_dev:
-            ansible_host: sandbox00.raccoongang.com
-            ansible_port: 22851
+        project_name_production:
+            ansible_host: X.X.X.X
+            ansible_port: 22
+            ansible_user: raccoon
+        project_name_stage:
+            ansible_host: stagingXX.raccoongang.com
+            ansible_port: 228XX
+            ansible_user: raccoon
+        project_name_dev:
+            ansible_host: stagingXX.raccoongang.com
+            ansible_port: 228XX
             ansible_user: raccoon
     children:
-        juniper:
+        project_name:
             hosts:
-                juniper_dev:
+                project_name_production:
+                project_name_stage:
+                project_name_dev:
