--- a/package.json
+++ b/package.json
@@ -3,10 +3,11 @@
   "version": "0.1.0",
   "dependencies": {
     "babel-core": "^6.23.0",
-    "babel-polyfill": "^6.0.16",
-    "babel-preset-react": "^6.24.1",
     "babel-loader": "^6.4.0",
+    "babel-polyfill": "^6.0.16",
     "babel-preset-env": "^1.2.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
     "backbone": "~1.3.2",
     "backbone.paginator": "~2.0.3",
     "coffee-loader": "^0.7.3",
@@ -58,6 +59,7 @@
     "pa11y-reporter-json-oldnode": "1.0.0",
     "plato": "1.2.2",
     "sinon": "2.3.5",
-    "squirejs": "^0.1.0"
+    "squirejs": "^0.1.0",
+    "uglifyjs-webpack-plugin": "^1.3.0"
   }
 }
