--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^15.5.4",
     "requirejs": "~2.3.2",
     "string-replace-webpack-plugin": "^0.1.3",
+    "uglifyjs-webpack-plugin": "^1.3.0",
     "uglify-js": "2.7.0",
     "underscore": "~1.8.3",
     "underscore.string": "~3.3.4",
@@ -59,7 +60,6 @@
     "pa11y-reporter-json-oldnode": "1.0.0",
     "plato": "1.2.2",
     "sinon": "2.3.5",
-    "squirejs": "^0.1.0",
-    "uglifyjs-webpack-plugin": "^1.3.0"
+    "squirejs": "^0.1.0"
   }
 }
