--- a/group_vars/project_name/edxapp.yml
+++ b/group_vars/project_name/edxapp.yml
@@ -48,6 +48,16 @@ EDXAPP_FEATURES_OVERRIDE:
   RG_ANALYTICS_GRADE_CRON_DOM: '*'
   RG_ANALYTICS_GRADE_CRON_DOW: '*'
   RG_ANALYTICS_GRADE_CRON_MONTH: '*'
+  # RG gamification
+  RG_GAMIFICATION:
+    ENABLED: "{{ COMMON_ENABLE_GAMMA }}"
+    RG_GAMIFICATION_ENDPOINT: "https://{{ GAMMA_SITE_NAME }}"
+    SECRET: "{{ GAMMA_APP_SECRET }}"
+    KEY: "{{ GAMMA_APP_KEY }}"
+    IGNORED_EVENT_TYPES:
+      - edx.certificate.created
+      - edx.course.student_notes.added
+  # RG gamification
 
 EDXAPP_FEATURES: "{{ _EDXAPP_FEATURES | combine(EDXAPP_FEATURES_OVERRIDE, recursive=True) }}"
 
@@ -67,12 +77,17 @@ EDXAPP_LMS_ENV_EXTRA:
 EDXAPP_CMS_ENV_EXTRA:
   RG_SENTRY_DSN: "{{ COMMON_RG_SENTRY_DSN }}"
 
+EDXAPP_EXTRA_REQUIREMENTS: "{{ _EDXAPP_EXTRA_REQUIREMENTS + GAMMA_EDXAPP_EXTRA_REQUIREMENTS + RG_IA_EDXAPP_EXTRA_REQUIREMENTS }}"
+
+_EDXAPP_EXTRA_REQUIREMENTS: []
+
 # rg_analytics
 # EDXAPP_ADDL_INSTALLED_APPS: ['rg_instructor_analytics', 'rg_instructor_analytics_log_collector']
 # analytics_log_watcher_sleep_time: 1200
 # analytics_processors_aliases: "enrollment video_views discussion student_step course_activity"
 # analytics_processors_sleep_time: 1200
-# EDXAPP_EXTRA_REQUIREMENTS:
+RG_IA_EDXAPP_EXTRA_REQUIREMENTS: []
+# RG_IA_EDXAPP_EXTRA_REQUIREMENTS:
 #   - name: 'git+git@gitlab.raccoongang.com:rg-developers/instructor-analytics@v2.2.1#egg=rg_instructor_analytics'
 #     extra_args: '-e'
 #   - name: 'git+git@gitlab.raccoongang.com:rg-developers/instructor-analytics-log-collector@v2.2.1#egg=rg_instructor_analytics_log_collector'
