--- a/group_vars/koa/edxapp.yml
+++ b/group_vars/koa/edxapp.yml
@@ -1,5 +1,5 @@
 ---
-EDXAPP_PLATFORM_NAME: "RG Juniper RC"
+EDXAPP_PLATFORM_NAME: "RG Koa"
 EDXAPP_LANG: "en_US.UTF-8"
 EDXAPP_LANGUAGE_CODE: "en"
 EDXAPP_TIME_ZONE: "Europe/Dublin"
@@ -26,10 +26,10 @@ EDXAPP_SESSION_COOKIE_SECURE: true
 
 EDXAPP_USE_GIT_IDENTITY: True
 # TODO unificated repositories structures
-edx_platform_repo: "git@gitlab.raccoongang.com:edx/edx-platform.git"
-EDX_PLATFORM_VERSION: "juniper-rg"
+edx_platform_repo: "https://github.com/edx/edx-platform.git"
+EDX_PLATFORM_VERSION: "open-release/koa.master"
 edx_ansible_source_repo: "https://gitlab.raccoongang.com/edx/configuration.git"
-CONFIGURATION_VERSION: "juniper-rg"
+CONFIGURATION_VERSION: "koa-rg"
 
 EDXAPP_GRADE_STORAGE_TYPE_LOCAL: true
 EDXAPP_GRADE_STORAGE_TYPE: ''
