--- a/hosts.yml
+++ b/hosts.yml
@@ -1,21 +1,11 @@
 ---
 all:
     hosts:
-        project_name_production:
-            ansible_host: X.X.X.X
+        koa_dev:
+            ansible_host: 3.236.72.172
             ansible_port: 22
-            ansible_user: raccoon
-        project_name_stage:
-            ansible_host: stagingXX.raccoongang.com
-            ansible_port: 228XX
-            ansible_user: raccoon
-        project_name_dev:
-            ansible_host: stagingXX.raccoongang.com
-            ansible_port: 228XX
-            ansible_user: raccoon
+            ansible_user: ubuntu
     children:
         project_name:
             hosts:
-                project_name_production:
-                project_name_stage:
-                project_name_dev:
+                koa_dev:
