--- a/hosts.yml
+++ b/hosts.yml
@@ -2,10 +2,16 @@
 all:
     hosts:
         koa_dev:
-            ansible_host: 34.254.94.13
+            ansible_host: 52.31.136.24
             ansible_port: 22
             ansible_user: ubuntu
+        koa_vanilla:
+            ansible_host: 54.72.7.226
+            ansible_port: 22
+            ansible_user: ubuntu
+
     children:
-        project_name:
+        koa:
             hosts:
                 koa_dev:
+                koa_vanilla:
