Enabled ecommerce on koa-dev

--- a/host_vars/koa_dev/edxapp.yml
+++ b/host_vars/koa_dev/edxapp.yml
@@ -1,7 +1,7 @@
 ---
 
 edx_platform_repo: "git@gitlab.raccoongang.com:edx/edx-platform.git"
-EDX_PLATFORM_VERSION: "koa-rg"
+EDX_PLATFORM_VERSION: "max/koa/requirements"
 EDXAPP_SITE_NAME: "lms-koa-dev.raccoongang.com"
 EDXAPP_CMS_SITE_NAME: "cms-koa-dev.raccoongang.com"
 EDXAPP_PREVIEW_LMS_BASE: "preview-koa-dev.raccoongang.com"
