--- a/host_vars/koa_dev/edxapp.yml
+++ b/host_vars/koa_dev/edxapp.yml
@@ -10,7 +10,7 @@ EDXAPP_SESSION_COOKIE_DOMAIN: ".raccoongang.com"
 
 ## extra
 ECOMMERCE_VERSION: 'open-release/koa.master'
-DISCOVERY_VERSION: 'open-release/koa.master'
+DISCOVERY_VERSION: 'master'
 ANALYTICS_API_VERSION: 'open-release/koa.master'
 INSIGHTS_VERSION: 'open-release/koa.master'
 NOTIFIER_VERSION: 'open-release/koa.master'
