--- a/host_vars/koa_dev/edxapp.yml
+++ b/host_vars/koa_dev/edxapp.yml
@@ -10,14 +10,14 @@ EDXAPP_SESSION_COOKIE_DOMAIN: ".raccoongang.com"
 
 ## extra
 ECOMMERCE_VERSION: 'open-release/koa.master'
-DISCOVERY_VERSION: 'master'
+DISCOVERY_VERSION: 'open-release/koa.master'
 ANALYTICS_API_VERSION: 'open-release/koa.master'
 INSIGHTS_VERSION: 'open-release/koa.master'
 NOTIFIER_VERSION: 'open-release/koa.master'
 CREDENTIALS_VERSION: 'open-release/koa.master'
 SANDBOX_ENABLE_NOTES: True
 SANDBOX_ENABLE_BLOCKSTORE: False
-FORUM_VERSION: 'master'
+FORUM_VERSION: 'open-release/koa.master'
 COMMON_CONFIG_NO_LOGGING: False
 DEVPI_SERVER_VERSION: '5.4.0'
 DEVPI_WEB_VERSION: '3.5.2'
@@ -25,3 +25,28 @@ DEVPI_CLIENT_VERSION: '5.1.1'
 EDX_NOTES_API_VERSION: 'open-release/koa.master'
 CERTS_VERSION: 'open-release/koa.master'
 COMMON_RETIREMENT_SERVICE_SETUP: true
+
+EDXAPP_LMS_ENV_EXTRA:
+  RG_GAMIFICATION:
+    ENABLED: True
+    RG_GAMIFICATION_ENDPOINT: "https://gamma-koa-dev.raccoongang.com/"
+    KEY: "{{ RG_GAMIFICATION_KEY }}"
+    SECRET: "{{ RG_GAMIFICATION_SECRET }}"
+    IGNORED_EVENT_TYPES: []
+
+EDXAPP_ADDL_INSTALLED_APPS: ['rg_instructor_analytics', 'rg_instructor_analytics_log_collector']
+analytics_log_watcher_sleep_time: 1200
+analytics_processors_aliases: "enrollment video_views discussion student_step course_activity"
+analytics_processors_sleep_time: 1200
+
+EDXAPP_EXTRA_REQUIREMENTS:
+  - name: 'git+git@gitlab.raccoongang.com:rg-developers/instructor-analytics@v3.0.0-rc.2#egg=rg_instructor_analytics'
+    extra_args: '-e'
+  - name: 'git+git@gitlab.raccoongang.com:rg-developers/instructor-analytics-log-collector@v3.0.0-rc.1#egg=rg_instructor_analytics_log_collector'
+    extra_args: '-e'
+  - name: 'edx-gamma-bridge==1.0.0.juniper.1'
+    extra_args: '--extra-index-url https://pypi.raccoongang.com'
+  - name: 'edx-gamma-dashboard==1.0.0.juniper.1'
+    extra_args: '--extra-index-url https://pypi.raccoongang.com'
+
+EDXAPP_RG_INSTRUCTOR_ANALYTICS_ENABLE: True
