--- a/host_vars/koa_dev/services.yml
+++ b/host_vars/koa_dev/services.yml
@@ -10,13 +10,13 @@ COMMON_ENABLE_CREDENTIALS: True
 COMMON_ENABLE_DISCOVERY: True
 COMMON_ENABLE_SHOPPING_CART: False
 COMMON_ENABLE_ECOMMERCE: True
-COMMON_ENABLE_ANALYTICS_API: False
+COMMON_ENABLE_ANALYTICS_API: True
 COMMON_ENABLE_INSIGHTS: False
 COMMON_ENABLE_CELERYBEAT: "{{ COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE }}"
 COMMON_ENABLE_ACCOUNT_DELETION: True
 SANDBOX_ENABLE_BLOCKSTORE: False
 #JOURNALS_ENABLED: False
-COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE: False
+COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE: True
 COMMON_ENABLE_EDXNOTES: False
 COMMON_ENABLE_EDXSEARCH: True
 COMMON_ENABLE_BACKUPS_DUPLICITY: False
