--- a/host_vars/koa_dev/theme.yml
+++ b/host_vars/koa_dev/theme.yml
@@ -1,8 +1,8 @@
 ---
- edxapp_theme_version: 'juniper-rg'
- EDXAPP_THEME_VERSION: '{{ edxapp_theme_version }}'
- edxapp_theme_source_repo: 'git@gitlab.raccoongang.com:edx/edx-theme.git'
- edxapp_theme_name: '{{ edxapp_theme_version }}'
- EDXAPP_COMPREHENSIVE_THEME_DIRS:  [ '/edx/app/edxapp/themes' ]
- EDXAPP_DEFAULT_SITE_THEME: "{{ edxapp_theme_name }}"
- EDXAPP_ENABLE_COMPREHENSIVE_THEMING: true
+# edxapp_theme_version: 'juniper-rg'
+# EDXAPP_THEME_VERSION: '{{ edxapp_theme_version }}'
+# edxapp_theme_source_repo: 'git@gitlab.raccoongang.com:edx/edx-theme.git'
+# edxapp_theme_name: '{{ edxapp_theme_version }}'
+# EDXAPP_COMPREHENSIVE_THEME_DIRS:  [ '/edx/app/edxapp/themes' ]
+# EDXAPP_DEFAULT_SITE_THEME: "{{ edxapp_theme_name }}"
+# EDXAPP_ENABLE_COMPREHENSIVE_THEMING: true
