--- a/group_vars/koa/gamma.yml
+++ b/group_vars/koa/gamma.yml
@@ -1,8 +1,6 @@
 ---
 
-COMMON_ENABLE_GAMMA: False
-
-GAMMA_SITE_NAME: gamma.project_name.domain.tld
+COMMON_ENABLE_GAMMA: True
 
 GAMMA_EDXAPP_EXTRA_REQUIREMENTS: []
 # GAMMA_EDXAPP_EXTRA_REQUIREMENTS:
