--- a/host_vars/koa_dev/theme.yml
+++ b/host_vars/koa_dev/theme.yml
@@ -1,5 +1,5 @@
 ---
-# edxapp_theme_version: 'juniper-rg'
+# edxapp_theme_version: 'koa-rg'
 # EDXAPP_THEME_VERSION: '{{ edxapp_theme_version }}'
 # edxapp_theme_source_repo: 'git@gitlab.raccoongang.com:edx/edx-theme.git'
 # edxapp_theme_name: '{{ edxapp_theme_version }}'
