Fixed JWT issuer configuration bug

--- a/host_vars/koa_dev/ecommerce.yml
+++ b/host_vars/koa_dev/ecommerce.yml
@@ -24,7 +24,9 @@ EDXAPP_ECOMMERCE_PUBLIC_URL_ROOT: "{{ ECOMMERCE_ECOMMERCE_URL_ROOT }}"
 
 ECOMMERCE_EDX_API_KEY: "{{ EDXAPP_EDX_API_KEY }}"
 ECOMMERCE_JWT_ISSUERS:
-  - "{{ COMMON_JWT_ISSUER }}"
+  - AUDIENCE: '{{ COMMON_JWT_AUDIENCE }}'
+    ISSUER: '{{ COMMON_JWT_ISSUER }}'
+    SECRET_KEY: '{{ COMMON_JWT_SECRET_KEY }}'
 ECOMMERCE_JWT_SECRET_KEYS:
   - "{{ COMMON_JWT_SECRET_KEY }}"
 ECOMMERCE_LANGUAGE_CODE: "{{ EDXAPP_LANGUAGE_CODE }}"
