--- a/host_vars/koa_vanilla/services.yml
+++ b/host_vars/koa_vanilla/services.yml
@@ -17,7 +17,7 @@ COMMON_ENABLE_ACCOUNT_DELETION: True
 SANDBOX_ENABLE_BLOCKSTORE: False
 #JOURNALS_ENABLED: False
 COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE: False
-COMMON_ENABLE_EDXNOTES: False
+COMMON_ENABLE_EDXNOTES: True
 COMMON_ENABLE_EDXSEARCH: True
 COMMON_ENABLE_BACKUPS_DUPLICITY: False
 COMMON_ENABLE_BACKUPS_AWS_SNAPSHOTS: False
