Changed service user name for credentials. Added flag AUTOMATIC_VERIFY_STUDENT_IDENTITY_FOR_TESTING to FEATURES

--- a/group_vars/koa/edxapp.yml
+++ b/group_vars/koa/edxapp.yml
@@ -39,6 +39,7 @@ EDXAPP_GRADE_STORAGE_KWARGS:
   location: "{{ edxapp_media_dir }}/grades"
 
 EDXAPP_FEATURES_OVERRIDE:
+  AUTOMATIC_VERIFY_STUDENT_IDENTITY_FOR_TESTING: true
   RG_DELETE_RETIRED: "{{ COMMON_ENABLE_ACCOUNT_DELETION }}"
   ENABLE_XBLOCK_VIEW_ENDPOINT: true
   ENABLE_RG_INSTRUCTOR_ANALYTICS: "{{ COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE }}"
