--- a/host_vars/koa_dev/credentials.yml
+++ b/host_vars/koa_dev/credentials.yml
@@ -2,3 +2,4 @@
 # CREDENTIALS_DOMAIN: "credentials-dev-project_name.raccoongang.com"
 CREDENTIALS_DOMAIN: "credentials-koa-dev.raccoongang.com"
 CREDENTIALS_LANGUAGE_CODE: "en-gb"
+CREDENTIALS_SERVICE_USER: "credentials_worker"
