--- a/host_vars/koa_dev/discovery.yml
+++ b/host_vars/koa_dev/discovery.yml
@@ -10,7 +10,7 @@ discovery_post_migrate_commands:
       --site-domain "example.com"
       --code "lms"
       --name "LMS"
-      --lms-url-root {{ EDXAPP_LMS_ROOT_URL }}
+      --lms-url {{ EDXAPP_LMS_ROOT_URL }}
       --ecommerce-api-url {{ EDXAPP_ECOMMERCE_API_URL }}
       --organizations-api-url {{ EDXAPP_ORGANIZATIONS_API_URL }}
       --courses-api-url {{ EDXAPP_COURSES_API_URL }}
