Added custom credentials repo

--- a/host_vars/koa_dev/credentials.yml
+++ b/host_vars/koa_dev/credentials.yml
@@ -30,4 +30,14 @@ credentials_cronjob_auto:
     name: "credentials copy catalog"
     filename: "update_credentials.sh"
     minute: "*/10"
+credentials_git_home: /edx/app/credentials
+CREDENTIALS_VERSION: 'koa-rg'
+CREDENTIALS_REPOS:
+  - PROTOCOL: 'ssh'
+    DOMAIN: "gitlab.raccoongang.com"
+    PATH: 'edx'
+    REPO: 'credentials.git'
+    VERSION: "{{ CREDENTIALS_VERSION }}"
+    DESTINATION: "{{ credentials_code_dir }}"
+    SSH_KEY: "{{ RG_COMMON_GIT_IDENTITY }}"
 
