--- a/host_vars/koa_dev/ecommerce.yml
+++ b/host_vars/koa_dev/ecommerce.yml
@@ -116,7 +116,7 @@ ecommerce_post_migrate_commands:
       --backend-service-client-id {{ ECOMMERCE_BACKEND_SERVICE_EDX_OAUTH2_KEY }}
       --backend-service-client-secret {{ ECOMMERCE_BACKEND_SERVICE_EDX_OAUTH2_SECRET }}
       --payment-support-email {{ EDXAPP_PAYMENT_SUPPORT_EMAIL }}
-      --discovery_api_url {{ EDXAPP_DISCOVERY_API_URL }}
+      --discovery_api_url https://{{ EDXAPP_DISCOVERY_API_URL }}
     when: True
 
 NGINX_ADDITIONAL_SERVICES_CONFIG:
