--- a/group_vars/koa/edxapp.yml
+++ b/group_vars/koa/edxapp.yml
@@ -42,12 +42,22 @@ EDXAPP_FEATURES_OVERRIDE:
   AUTOMATIC_VERIFY_STUDENT_IDENTITY_FOR_TESTING: true
   RG_DELETE_RETIRED: "{{ COMMON_ENABLE_ACCOUNT_DELETION }}"
   ENABLE_XBLOCK_VIEW_ENDPOINT: true
+  # RG Analytics
   ENABLE_RG_INSTRUCTOR_ANALYTICS: "{{ COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE }}"
+  # For task grade_collector_stat
   RG_ANALYTICS_GRADE_CRON_MINUTE: '*/15'
   RG_ANALYTICS_GRADE_CRON_HOUR: '*'
   RG_ANALYTICS_GRADE_CRON_DOM: '*'
   RG_ANALYTICS_GRADE_CRON_DOW: '*'
   RG_ANALYTICS_GRADE_CRON_MONTH: '*'
+  #  For task collect_demographics
+  RG_ANALYTICS_DEMOGRAPHICS_SCHEDULE:
+    minute: '*/15'
+    hour: '*'
+    day_of_month: '*'
+    day_of_week: '*'
+    month_of_year: '*'
+  # RG Analytics
   # RG gamification
   RG_GAMIFICATION:
     ENABLED: True
