--- a/host_vars/koa_dev/credentials.yml
+++ b/host_vars/koa_dev/credentials.yml
@@ -3,6 +3,7 @@
 CREDENTIALS_DOMAIN: "credentials-koa-dev.raccoongang.com"
 CREDENTIALS_LANGUAGE_CODE: "en-gb"
 CREDENTIALS_SERVICE_USER: "credentials_worker"
+CREDENTIALS_SERVICE_USER_NAME: "credentials_worker"
 CREDENTIALS_MEDIA_ROOT: "{{ COMMON_BASE_DIR }}/var/credentials/media"
 credentials_cronjob_auto:
   - script: |
