Added credentials username to edxapp.yml

--- a/group_vars/koa/edxapp.yml
+++ b/group_vars/koa/edxapp.yml
@@ -24,6 +24,7 @@ EDXAPP_LMS_ROOT_URL: "{{ EDXAPP_LMS_BASE_SCHEME }}://{{ EDXAPP_LMS_BASE }}"
 EDXAPP_SESSION_COOKIE_NAME: "{{ EDXAPP_LMS_SITE_NAME }}_edxapp"
 EDXAPP_CSRF_COOKIE_SECURE: true
 EDXAPP_SESSION_COOKIE_SECURE: true
+EDXAPP_CREDENTIALS_SERVICE_USERNAME: "credentials_worker"
 
 EDXAPP_USE_GIT_IDENTITY: True
 # TODO unificated repositories structures
