--- a/hosts.yml
+++ b/hosts.yml
@@ -9,9 +9,13 @@ all:
             ansible_host: 54.72.7.226
             ansible_port: 22
             ansible_user: ubuntu
-
+        koa_stage:
+            ansible_host: staging04.raccoongang.com
+            ansible_port: 28148
+            ansible_user: raccoon
     children:
         koa:
             hosts:
                 koa_dev:
                 koa_vanilla:
+                koa_stage:
