--- a/host_vars/koa_vanilla/services.yml
+++ b/host_vars/koa_vanilla/services.yml
@@ -7,7 +7,7 @@ COMMON_ENABLE_CERTS: False
 COMMON_ENABLE_XQUEUE: "{{ COMMON_ENABLE_CERTS }}"
 COMMON_ENABLE_FORUM: True
 COMMON_ENABLE_CREDENTIALS: True
-COMMON_ENABLE_DISCOVERY: True
+COMMON_ENABLE_DISCOVERY: False
 COMMON_ENABLE_SHOPPING_CART: False
 COMMON_ENABLE_ECOMMERCE: True
 COMMON_ENABLE_ANALYTICS_API: False
