--- a/host_vars/koa_stage/ecommerce.yml
+++ b/host_vars/koa_stage/ecommerce.yml
@@ -102,7 +102,7 @@ ECOMMERCE_PAYMENT_PROCESSOR_CONFIG:
 ECOMMERCE_PLATFORM_NAME: "{{ EDXAPP_PLATFORM_NAME }}"
 ECOMMERCE_SOCIAL_AUTH_REDIRECT_IS_HTTPS: true
 ECOMMERCE_SSL_NGINX_PORT: 443
-ECOMMERCE_WORKER_BROKER_HOST: "{{ rabbitmq_ip }}"
+ECOMMERCE_WORKER_BROKER_HOST: "{{ REDIS_BIND_IP }}"
 ECOMMERCE_WORKER_BROKER_PASSWORD: "{{ EDXAPP_CELERY_PASSWORD }}"
 ECOMMERCE_WORKER_ECOMMERCE_API_ROOT: "{{ ECOMMERCE_ECOMMERCE_URL_ROOT }}"
 ECOMMERCE_WORKER_JWT_ISSUER: "{{ COMMON_JWT_AUDIENCE }}"
