--- a/host_vars/koa_stage/services.yml
+++ b/host_vars/koa_stage/services.yml
@@ -6,18 +6,18 @@ COMMON_SENTRY_ENVIRONMENT: "{{ COMMON_ENVIRONMENT }}"
 COMMON_ENABLE_CERTS: False
 COMMON_ENABLE_XQUEUE: "{{ COMMON_ENABLE_CERTS }}"
 COMMON_ENABLE_FORUM: True
-COMMON_ENABLE_CREDENTIALS: False
-COMMON_ENABLE_DISCOVERY: False
+COMMON_ENABLE_CREDENTIALS: True
+COMMON_ENABLE_DISCOVERY: True
 COMMON_ENABLE_SHOPPING_CART: False
-COMMON_ENABLE_ECOMMERCE: False
+COMMON_ENABLE_ECOMMERCE: True
 COMMON_ENABLE_ANALYTICS_API: False
 COMMON_ENABLE_INSIGHTS: False
 COMMON_ENABLE_CELERYBEAT: "{{ COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE }}"
-COMMON_ENABLE_ACCOUNT_DELETION: False
+COMMON_ENABLE_ACCOUNT_DELETION: True
 SANDBOX_ENABLE_BLOCKSTORE: False
 #JOURNALS_ENABLED: False
 COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE: False
-COMMON_ENABLE_EDXNOTES: False
+COMMON_ENABLE_EDXNOTES: True
 COMMON_ENABLE_EDXSEARCH: True
 COMMON_ENABLE_BACKUPS_DUPLICITY: False
 COMMON_ENABLE_BACKUPS_AWS_SNAPSHOTS: False
