--- a/host_vars/koa_stage/credentials.yml
+++ b/host_vars/koa_stage/credentials.yml
@@ -40,4 +40,7 @@ CREDENTIALS_REPOS:
     VERSION: "{{ CREDENTIALS_VERSION }}"
     DESTINATION: "{{ credentials_code_dir }}"
     SSH_KEY: "{{ RG_COMMON_GIT_IDENTITY }}"
+CREDENTIALS_CUSTOM_THEME_PACKAGE:
+  - name: 'git+https://gitlab.raccoongang.com/edx/credentials-themes.git@0.2.0#egg=edx_credentials_themes==0.2.0'
+    extra_args: '-e'
 
