--- a/host_vars/koa_ne/services.yml
+++ b/host_vars/koa_ne/services.yml
@@ -9,8 +9,8 @@ COMMON_ENABLE_FORUM: True
 COMMON_ENABLE_CREDENTIALS: True
 COMMON_ENABLE_DISCOVERY: True
 COMMON_ENABLE_SHOPPING_CART: False
-COMMON_ENABLE_ECOMMERCE: True
-COMMON_ENABLE_ANALYTICS_API: True
+COMMON_ENABLE_ECOMMERCE: False
+COMMON_ENABLE_ANALYTICS_API: False
 COMMON_ENABLE_INSIGHTS: False
 COMMON_ENABLE_CELERYBEAT: "{{ COMMON_RG_INSTRUCTOR_ANALYTICS_ENABLE }}"
 COMMON_ENABLE_ACCOUNT_DELETION: True
@@ -24,4 +24,3 @@ COMMON_ENABLE_BACKUPS_AWS_SNAPSHOTS: False
 COMMON_ENABLE_BACKUPS_AZURE_RECOVERY_VAULT: False
 COMMON_ENABLE_FILEBEAT: False
 COMMON_ENABLE_SENTRY: False
-COMMON_ENABLE_ENTERPRISE: True
