--- a/hosts.yml
+++ b/hosts.yml
@@ -13,9 +13,14 @@ all:
             ansible_host: staging04.raccoongang.com
             ansible_port: 28148
             ansible_user: raccoon
+        koa_ne:
+            ansible_host: staging05.raccoongang.com
+            ansible_port: 28171
+            ansible_user: raccoon
     children:
         koa:
             hosts:
                 koa_dev:
                 koa_vanilla:
                 koa_stage:
+                koa_ne:
