--- a/host_vars/koa_ne/edxapp.yml
+++ b/host_vars/koa_ne/edxapp.yml
@@ -2,9 +2,9 @@
 
 edx_platform_repo: "git@gitlab.raccoongang.com:edx/edx-platform.git"
 EDX_PLATFORM_VERSION: "koa-rg"
-EDXAPP_SITE_NAME: "lms-koa-stage.raccoongang.com"
-EDXAPP_CMS_SITE_NAME: "cms-koa-stage.raccoongang.com"
-EDXAPP_PREVIEW_LMS_BASE: "preview-koa-stage.raccoongang.com"
+EDXAPP_SITE_NAME: "lms-koa-ne.raccoongang.com"
+EDXAPP_CMS_SITE_NAME: "cms-koa-ne.raccoongang.com"
+EDXAPP_PREVIEW_LMS_BASE: "preview-koa-ne.raccoongang.com"
 
 EDXAPP_SESSION_COOKIE_DOMAIN: ".raccoongang.com"
 
@@ -49,7 +49,7 @@ EDXAPP_FEATURES_OVERRIDE:
   # RG gamification
   RG_GAMIFICATION:
     ENABLED: False
-    RG_GAMIFICATION_ENDPOINT: "https://gamma-koa-stage.raccoongang.com/"
+    RG_GAMIFICATION_ENDPOINT: "https://gamma-koa-ne.raccoongang.com/"
     KEY: "{{ RG_GAMIFICATION_KEY }}"
     SECRET: "{{ RG_GAMIFICATION_SECRET }}"
     IGNORED_EVENT_TYPES:
@@ -77,7 +77,7 @@ EDXAPP_PRIVATE_REQUIREMENTS:
 SITE_CONFIGURATION_STORAGE:
     - domain: "{{ EDXAPP_SITE_NAME }}"
       values:
-        COURSE_CATALOG_API_URL: 'https://discovery-koa-stage.raccoongang.com/api/v1'
+        COURSE_CATALOG_API_URL: 'https://discovery-koa-ne.raccoongang.com/api/v1'
         email_from_address: 'no-reply@raccoongang.com'
         payment_support_email: 'info@raccoongang.com'
 
